--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -9,13 +9,13 @@ jobs:
       - name: git checkout
         uses: actions/checkout@v2
 
-      - name: use node.js version 16.x
-        uses: actions/setup-node@v2
+      - name: use node.js version 18.x
+        uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: 18.x
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --legacy-peer-deps
 
       - name: build
         run: npm run build
