--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,7 +49,18 @@
     "react/require-default-props": "off", // props에 undefined 들어가는 것을 방지
     "jsx-a11y/accessible-emoji": "off", // emoji 대신 img 태그 사용
     "jsx-a11y/no-static-element-interactions": "off", // html tag에서 event handler있을 때 role props도 있어야 함
-    "jsx-a11y/click-events-have-key-events": "off" // non-interactive한 tag의 경우 클릭 이벤트가 있을 때 keyboard 이벤트도 함께 있어야 함
+    "jsx-a11y/click-events-have-key-events": "off", // non-interactive한 tag의 경우 클릭 이벤트가 있을 때 keyboard 이벤트도 함께 있어야 함
+    "react/default-props-match-prop-types": "off",
+    "import/no-extraneous-dependencies": [
+      "warn",
+      {
+        "devDependencies": true,
+        "optionalDependencies": true,
+        "peerDependencies": true
+      }
+    ],
+    "import/order": "off",
+    "react/function-component-definition": "off"
   },
   "settings": {
     "react": {
