--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,7 +1,7 @@
 name: CI/CD
 on:
-  push:
-    branches: ["jinydev/**"]
+  pull_request:
+    branches: ["main"]
 jobs:
   build:
     runs-on: ubuntu-latest
