--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "@types/styled-components": "^5.1.26",
+    "gray-matter": "^4.0.3",
     "next": "13.0.2",
     "next-optimized-images": "^2.6.2",
     "react": "18.2.0",
