--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "@types/styled-components": "^5.1.26",
+    "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
     "next": "13.0.2",
+    "next-mdx-remote": "^4.2.0",
     "next-optimized-images": "^2.6.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recoil": "^0.7.6",
     "recoil-persist": "^4.2.0",
+    "rehype-slug": "^5.1.0",
+    "remark-toc": "^8.0.1",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
