--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@iconify/react": "^4.0.0",
+    "@mdx-js/react": "^2.1.5",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
@@ -22,6 +23,7 @@
     "next": "13.0.2",
     "next-mdx-remote": "^4.2.0",
     "next-optimized-images": "^2.6.2",
+    "prism-react-renderer": "^1.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recoil": "^0.7.6",
