--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint --fix",
     "prepare": "husky install",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "prebuild": "node ./utils/sitemapGenerator.mjs"
   },
   "dependencies": {
     "@iconify/react": "^4.0.0",
