--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
+    "@gogaille/storybook-addon-next-router": "^4.0.0",
     "@storybook/addon-actions": "^6.5.13",
     "@storybook/addon-docs": "^6.5.13",
     "@storybook/addon-essentials": "^6.5.13",
@@ -65,7 +66,7 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "react-docgen-typescript-loader": "^3.7.2",
+    "storybook-addon-styled-component-theme": "^2.0.0",
     "typescript": "^4.8.4",
     "webpack": "^5.74.0"
   },
