--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,10 +15,10 @@ jobs:
           node-version: 18.x
 
       - name: Install dependencies
-        run: npm ci --legacy-peer-deps
+        run: yarn
 
       - name: build
-        run: npm run build
+        run: yarn build
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
