--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "next lint --fix",
     "prepare": "husky install",
     "storybook": "start-storybook -p 6006 -s ./public",
-    "build-storybook": "build-storybook s public",
+    "build-storybook": "build-storybook -s ./public",
     "prebuild": "node ./utils/sitemapGenerator.mjs"
   },
   "dependencies": {
@@ -50,6 +50,7 @@
     "@typescript-eslint/parser": "^5.42.0",
     "babel-loader": "^8.3.0",
     "babel-plugin-styled-components": "^2.0.7",
+    "chromatic": "^6.11.4",
     "eslint": "^8.26.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
